# openGL-Raytracer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  make.bat  renderer.ilk
Renderer/: Bodies.h  Initialization.h  Source.cpp  Structures.h  cmakeLists.txt
Renderer/Shaders/: basic.frag  basic.vert
Renderer/src/: Bodies.h  Initialization.h  Shader.h  Source.cpp
renderer/: CMakeLists.txt  Makefile  renderer
renderer/src/: Bodies.h  Initialization.h  Shader.h  Source.cpp  Structures.h
shaders/: basic.frag  trace.frag  trace.vert
src/: Bodies.h  Gui.h  Initialization.h  Selection.h  Shader.h  Source.cpp  Structures.h  TraceSimple.h
